[package]
name = "screenpipe"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cross-platform screen capture
xcap = "0.0.10"

# threadpool
threadpool = "1.8.1"

# Image processing
image = "0.25.0"

# OCR
rusty-tesseract = "1.1.10"

# Dates
chrono = "0.4.31"

rusqlite = { version = "0.30.0", features = ["chrono", "bundled", "array"] }

# FFmpeg bindings
ffmpeg-next = "7.0.2"

# Embeddings
candle = { package = "candle-core", version = "0.3.2" }
candle-nn = "0.3.2"
candle-transformers = "0.3.2"
tokenizers = "0.15.0"
lazy_static = "1.4.0"
base64 = "0.21.7"

# Server
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
hyper = "1.1"
tower-http = { version = "0.5.0", features = ["cors"] }

[profile.release]
opt-level = 3

