[package]
name = "screenpipe-apple-intelligence"
version = "0.1.0"
edition = "2021"
description = "On-device AI processing using Apple Foundation Models framework (macOS 26+)"
license = "MIT"

[features]
default = []
screenpipe-query = ["dep:reqwest", "dep:chrono", "dep:tokio"]
server = ["dep:axum", "dep:tokio", "dep:uuid", "dep:tokio-stream"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"], optional = true }
chrono = { version = "0.4", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net"], optional = true }
axum = { version = "0.7", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
tokio-stream = { version = "0.1", optional = true }

[[bin]]
name = "fm-server"
path = "src/server_bin.rs"
required-features = ["server"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
