[package]
name = "screenpipe-integrations"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
image = { workspace = true }
reqwest = { workspace = true }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
tempfile = "3.2"
anyhow = "1.0"
mime_guess = "2.0.5"
screenpipe-core = { path = "../screenpipe-core" }
