[package]
name = "screenpipe-app"
version = "0.2.96"
description = ""
authors = ["you"]
license = ""
repository = ""
default-run = "screenpipe-app"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [
  "macos-private-api",
  "tray-icon",
  "devtools",
  "image-png",
  "image-ico",
] }
tauri-utils = { version = "2.0.0", features = [] }

# plugins
tauri-plugin-fs = "2.0.0"
tauri-plugin-notification = "2.0.0"
tauri-plugin-updater = "2.0.1"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-os = "2.0.0"
tauri-plugin-process = "2.0.0"
tauri-plugin-autostart = "2.0.0"

serde_json = "1.0"

tower-http = { version = "0.4.0", features = ["cors", "trace"] }
http = "0.2"

# Logging
log = "0.4.17"

# Tokio
tokio = { version = "1.36.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Uuid
uuid = { version = "1.10.0", features = ["v4"] }

# tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"


# Chrono
tauri-plugin-shell = "2.0.0"
tauri-plugin-store = "2"


anyhow = "1.0.71"

# System information
sysinfo = "0.29.0"

# hakc 
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

# server
axum = "0.6.0"    # or your current version
serde = "1.0.160"



dirs = "5.0.1"


[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.0.0"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = "2.0.0"
tauri-plugin-updater = "2.0.0"

[features]
cudart = []
metal = []
mkl = []
default = ["custom-protocol"]

# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[package.metadata.cargo-machete]
ignored = ["tauri-utils"]
