[package]
name = "screenpipe-app"
version = "0.38.5"
description = ""
authors = ["you"]
license = ""
repository = ""
default-run = "screenpipe-app"
edition = "2021"
rust-version = "1.84"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=2.0.3", features = [] }

[dependencies]
tauri = { version = "=2.1.1", features = [
  "protocol-asset",
  "macos-private-api",
  "tray-icon",
  "devtools",
  "image-png",
  "image-ico",
] }
tauri-utils = { version = "=2.1.0", features = [] }
# plugins
tauri-plugin-fs = "=2.0.0"
tauri-plugin-notification = "=2.0.0"
tauri-plugin-updater = "=2.0.1"
tauri-plugin-dialog = "=2.0.0"
tauri-plugin-os = "=2.0.0"
tauri-plugin-process = "=2.0.0"
tauri-plugin-autostart = "=2.0.0"
tauri-plugin-shell = "=2.0.0"
tauri-plugin-store = "=2.2.0"
tauri-plugin-http = "2"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

tower-http = { version = "0.4.0", features = ["cors", "trace"] }
http = "0.2"

# Logging
log = "0.4.17"

# Tokio
tokio = { version = "1.36.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"


anyhow = "1.0.71"

# System information
sysinfo = "=0.29.0"

# hakc
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

# server
axum = "0.6.0" # or your current version


dirs = "5.0.1"
tauri-plugin-deep-link = "2"

once_cell = "1.20.0"
tauri-plugin-sentry = "0.4.0"

notify = "8.0.0"
futures = "0.3.30"
async-stream = "0.3"

chrono = "0.4.39"
tauri-plugin-opener = "2.2.5"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.0.0"
tauri-plugin-global-shortcut = "2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
tauri-plugin-updater = "2.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.4"
libc = "0.2.152"
cocoa = "0.26.0"
objc = "0.2.7"
base64 = "0.22.1"
# bunch of hack for permissions
scap = { git = "https://github.com/CapSoftware/scap", rev = "92cabc5" }
nokhwa-bindings-macos = { git = "https://github.com/CapSoftware/nokhwa", rev = "0d3d1f30a78b" }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }


[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52.0"
lazy_static = "1.5.0"
image = "0.25.5"
windows-icons = { git = "https://github.com/tribhuwan-kumar/windows-icons.git" }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.1"
base64 = "0.22.1"

[features]
cudart = []
metal = []
mkl = []
llm = []
cargo-clippy = []
default = ["custom-protocol"]

# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[package.metadata.cargo-machete]
ignored = ["tauri-utils"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
