[package]
name = "screenpipe-universal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
btleplug = "0.11.6"
futures = "0.3"

[[bin]]
name = "screenpipe-universal"
path = "src/bin/main.rs"

