[package]
name = "session_service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "session_service"
path = "src/main.rs"

[[bin]]
name = "session_manager"
path = "src/main_exe.rs"

[dependencies]
tokio = { workspace = true, features = ["full", "tracing"] }
image = { workspace = true }
byteorder = { workspace = true }
windows-service = { workspace = true }
windows = { workspace = true, features = [
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI",
    "Win32_Graphics_Gdi",
    "Win32_Graphics",
    "Win32_System_Memory",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage",
    "Storage_Streams",
    "Win32_System_RemoteDesktop",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Environment",
] }
windows-sys = { workspace = true, features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_StationsAndDesktops",
] }
