[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=2.0.0-beta.19", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.24", features = ["tray-icon", "devtools"] }

screenpipe-vision = { git = "https://github.com/louis030195/screen-pipe", branch = "main" }

axum = "0.7.5"

# Logging
log = "0.4.17"
env_logger = "0.11.3"

# Tokio
tokio = { version = "1.36.0", features = ["full"] }

# Directory management
dirs = "5.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Uuid
uuid = { version = "1.10.0", features = ["v4"] }

# Sentry 
sentry = "0.34.0"

# Autostart
tauri-plugin-autostart = "2.0.0-beta.9"

# Chrono
chrono = "0.4.3"
tauri-plugin-shell = "2.0.0-alpha.2"
tauri-plugin-store = "2.0.0-beta"


# M series MacOS
[target.'cfg(target_os = "macos")'.dependencies]
screenpipe-server = { path = "../../../../screenpipe-server", features = ["metal"] }
screenpipe-audio = { path = "../../../../screenpipe-audio", features = ["metal"] }

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
screenpipe-server = { path = "../../../../screenpipe-server", features = [] }
screenpipe-audio = { path = "../../../../screenpipe-audio", features = [] }

# Windows
[target.'cfg(target_os = "windows")'.dependencies]
screenpipe-server = { path = "../../../../screenpipe-server", features = [] }
screenpipe-audio = { path = "../../../../screenpipe-audio", features = [] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.0.0-alpha.2"
tauri-plugin-updater = "2.0.0-alpha.2"

[features]
cuda = ["screenpipe-server/cuda", "screenpipe-audio/cuda"]
metal = ["screenpipe-server/metal", "screenpipe-audio/metal"]

# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
